# CWDT

./: CMakeLists.txt  README.md
cmake/: FindBoost.cmake  FindEigen.cmake  FindGurobi.cmake  Findlibigl.cmake
data/: result.off  result_tets.off
src/: cwdt.cpp  cwdt.h  edge.h  macro.h  main.cpp
src/cwdt/: cwdt.cpp  cwdt.h
